<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="MAIN" Id="{10237b80-3db8-466f-b87c-3215b813ccf7}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	ConveyorControl				: BOOL;
	Timeout						: TOF;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Conveyor control is ok when the ES nor the stop button is pushed
IF NOT GVL.StopButton OR NOT GVL.EmergencyStopButton	THEN
	ConveyorControl	:= FALSE;
	
ELSIF gvl.StartButton	AND gvl.StopButton				THEN
	ConveyorControl	:= TRUE;
	
END_IF

// Minimum time the conveyor keeps on running
Timeout(IN:= ConveyorControl AND gvl.ProductDetectedSensor, PT:=T#5S, Q=> , ET=> );
// Conveyor keeps on running until not full and some extra time
gvl.MotorContactor	:= ConveyorControl AND Timeout.Q AND NOT gvl.ConveyorFullSensor;]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>